<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CardAndColors.DetailActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sportImageDetail"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleDetail"
            android:layout_alignBottom="@+id/sportImageDetail"
            android:text="@string/title_placeholder"
            android:padding="8dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            style="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sportImageDetail"
            android:id="@+id/newsTitleDetail"
            android:textColor="?android:textColorSecondary"
            android:text="@string/news_placeholder"
            android:padding="8dp"
            style="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newsTitleDetail"
            android:id="@+id/subTitleDetail"
            android:text="@string/subtitle_detail"
            android:padding="8dp"
            style="@style/TextAppearance.AppCompat.Subhead" />

    </RelativeLayout>

</ScrollView>
